Fix hero text spacing

--- a/src/styles/framework.css
+++ b/src/styles/framework.css
@@ -139,6 +139,10 @@ body {
   padding: 1rem;
 }
 
+.pl-3 {
+  padding-left: 3rem;
+}
+
 .p-5 {
   padding: 5rem;
 }
