--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -36,6 +36,10 @@
   max-width: 1000px;
 }
 
+.hero__text {
+  width: 500px;
+}
+
 .gallery__item {
   height: 400px;
   overflow: hidden;
